RESOLVED FIXED192283
[iOSMac] Unable to upload non-image files using drag and drop in WKWebView
https://bugs.webkit.org/show_bug.cgi?id=192283
Summary [iOSMac] Unable to upload non-image files using drag and drop in WKWebView
Wenson Hsieh
Reported 2018-12-01 18:49:06 PST
SSIA
Attachments
First pass (20.54 KB, patch)
2018-12-02 16:05 PST, Wenson Hsieh
rniwa: review+
Patch for landing (20.53 KB, patch)
2018-12-03 07:04 PST, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2018-12-01 18:49:35 PST
Wenson Hsieh
Comment 2 2018-12-02 16:05:27 PST
Created attachment 356350 [details] First pass
Wenson Hsieh
Comment 3 2018-12-02 22:25:37 PST
Comment on attachment 356350 [details] First pass View in context: https://bugs.webkit.org/attachment.cgi?id=356350&action=review Thanks for the review! > Source/WebCore/ChangeLog:42 > + If the pasteboard contains "public.file-url", don't consider "text-uri-list" to be one of the data types that's Oops, I just noticed that I wrote "text-uri-list" here instead of "text/uri-list". I'll fix this typo before landing. > Source/WebCore/ChangeLog:43 > + safe to expose to the page. Our currently behavior in this case is that we will advertise "text-uri-list" as a (here too)
Wenson Hsieh
Comment 4 2018-12-03 07:04:46 PST
Created attachment 356378 [details] Patch for landing
WebKit Commit Bot
Comment 5 2018-12-03 07:42:19 PST
Comment on attachment 356378 [details] Patch for landing Clearing flags on attachment: 356378 Committed r238795: <https://trac.webkit.org/changeset/238795>
Note You need to log in before you can comment on or make changes to this bug.